--- a/css/styles.css
+++ b/css/styles.css
@@ -4,63 +4,70 @@ body {
   padding: 0;
   color: #000;
 }
+h1,h2,h3,h4,h5,p,ul {
+  margin: 0;
+  padding: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.section{
+  padding: 94px 0px 94px 0px;
+  width: 100%;
+}
+.container{
+
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding: 0px 15px 0px 15px;
+  box-sizing: border-box;
+
+}
+
 :root {
   --accent-color: #2196f3;
   --secondary-accent-color: #188ce8;
   --primary-white-color: #fff;
   --dark-background: #2f303a;
-  --light-background: #f5f5f5;
   --text-font: "Roboto", sans-serif;
   --logo-font: "Raleway", sans-serif;
   --logo-font-size: 26px;
   --project-title-size: 18px;
   --project-discription-size: 16px;
   --primary-font-size: 14px;
+  --hero-font-weight: 900;
   --bold-font-weight: 700;
   --medium-font-weight: 500;
-  --regular-font-weight: 400;
-  --hero-font-weight: 900;
   --title-text-color: #212121;
   --secondary-text-color: #757575;
-  --footer-text-color: #fff9;
+
+  --regular-font-weight: 400;
 }
 /* !!! ------------------------------------- !!!*/
 /* !!! ------------------ HEADER------------------- !!!*/
 /* !!! ------------------------------------- !!!*/
-
 .header {
-  display: block;
-  background-color: var(--light-background);
-  width: 100%;
-  height: 80px;
-}
-.head-block {
   display: flex;
-  width: 1170px;
-  height: 80px;
-  margin-left: auto;
-  margin-right: auto;
-  align-items: center;
-  justify-content: center;
-  padding: 0px 15px;
-
-  /* border: 2px solid red; */
+  background-color: #fff;
+  border-bottom: 1px solid #ececec;
+}
+.head-flex{
+    align-items: center;
+  display: flex;
 }
 /* !!! ------------------ LOGO ------------------ !!! */
 .head-logo {
-  margin: 0;
-  width: 145px;
-  height: 31px;
-
-  /* --------- */
   font-family: var(--logo-font);
-  font-style: normal;
   font-weight: var(--bold-font-weight);
   font-size: var(--logo-font-size);
   color: var(--title-text-color);
   text-decoration: none;
   list-style: none;
-  letter-spacing: 3%;
+  letter-spacing: 0.03em;
+  margin-right: 94px;
 }
 .span-logo {
   color: var(--accent-color);
@@ -69,142 +76,109 @@ body {
   color: var(--primary-white-color);
 }
 /* !!! ------------------ NAV ------------------ !!! */
-
 .nav {
-  display: flex;
-  align-items: center;
-  margin: 0px;
+ margin-right: 344px;
+ padding-top: 32px;
+ padding-bottom: 32px;
 }
-.nav-ul {
-  display: flex;
-  width: 281px;
-  height: 16px;
-  margin-left: 93px;
-  padding: 0;
-}
+
 .nav-link {
   text-decoration: none;
   color: var(--title-text-color);
 }
-.activity {
-  color: var(--accent-color);
-}
-.nav-link:hover {
+
+.nav-link:hover,.nav-link:focus {
   color: var(--accent-color);
 }
 .nav-ul {
+  display: flex;
   list-style: none;
 }
-
 .nav-list-item {
+
   text-decoration: none;
-  font-family: var(--text-font);
-  font-style: normal;
   font-weight: var(--medium-font-weight);
   font-size: var(--primary-font-size);
-  line-height: 16px;
-  letter-spacing: 2%;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
 }
-.nav-list-item:not(:last-child) {
+.nav-list-item:not(:last-child){
   margin-right: 50px;
+}
+.activity {
+  color: var(--accent-color);
 }
 /* !!! ------------------ CONTACTS ------------------ !!! */
 .head-contacts {
   display: flex;
-  justify-content: space-between;
-  width: 306px;
-  height: 18px;
+  margin: 0;
   padding: 0;
-  margin-left: auto;
   list-style: none;
 }
-.head-list-item-contacts:last-child {
-  margin-left: 50px;
+.head-list-item-contacts:not(:last-child){
+  margin-right: 50px;
 }
 .head-contacts-link {
   text-decoration: none;
   color: var(--title-text-color);
 }
-.head-contacts-link:hover {
+.head-contacts-link:hover,.head-contacts-link:focus {
   color: var(--accent-color);
 }
 .head-contacts-link {
   color: var(--secondary-text-color);
   text-decoration: none;
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: var(--medium-font-weight);
   font-size: var(--primary-font-size);
-  line-height: 16px;
-  letter-spacing: 2%;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
 }
-.head-contacts-link:hover {
+.head-contacts-link:hover, .head-contacts-link:focus {
   color: var(--accent-color);
-}
-.contacts-mail {
-  width: 135px;
-  height: 16px;
-}
-.contacts-tel {
-  width: 122px;
-  height: 16px;
 }
 
 /* !!! ------------------ MAIN ------------------ !!!*/
-.main {
-  color: --light-background;
+.main{
+  width: 100%;
 }
 /* !!! ------------------ MAIN-HEAD(STUDIO) ------------------ !!!*/
-.main-head {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 600px;
 
+.main-first-block{
+
+  text-align: center;
+  width: 100%;
   background-color: var(--dark-background);
+  padding: 200px  452px 200px 452px;
+
 }
 .head-title {
-  margin-left: auto;
   margin-right: auto;
-  margin-bottom: 30px;
-  margin-top: 0px;
-
-  width: 696px;
-  height: 120px;
+  margin-left: auto;
   color: var(--primary-white-color);
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: var(--hero-font-weight);
+  font-weight: 900;
   font-size: 44px;
-  line-height: 60px;
-  text-align: center;
-  letter-spacing: 6%;
+  line-height: 1.25;
+  letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 .head-btn {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  margin-right: auto;
-  margin-left: auto;
-  width: 216px;
+  margin-top: 30px;
+  width: 215px;
   height: 50px;
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: var(--primary-white-color);
   background-color: var(--accent-color);
-  font-family: "Roboto";
-  font-style: normal;
+  font-family: var(--text-font);
   font-weight: var(--bold-font-weight);
   font-size: 16px;
-  line-height: 30px;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 6%;
+  line-height: 1.9;
+  cursor: pointer;
+  letter-spacing: 0.06em;
 }
-.head-btn:hover {
+.head-btn:hover,.head-btn:focus {
   background-color: var(--secondary-accent-color);
 }
 /* !!! ------------------ MAIN-FEATURES(STUDIO) ------------------ !!!*/
@@ -212,189 +186,107 @@ body {
 }
 .features-ul {
   display: flex;
-  justify-content: space-between;
-  width: 1170px;
-  height: 98px;
-  margin-top: 94px;
-  margin-bottom: 94px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0px 15px;
-  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   list-style: none;
-  /* order: 2px solid red; */
-}
-.features-item-one {
-  width: 270px;
-  height: 98px;
-}
-.features-item-two {
-  width: 270px;
-  height: 74px;
-}
-.features-item-tree {
-  width: 270px;
-  height: 74px;
-}
-.features-item-four {
-  width: 270px;
-  height: 98px;
 }
 .features-list-item-title {
   margin: 0;
-  font-family: "Roboto";
-  font-style: normal;
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 3%;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--title-text-color);
 }
 .features-list-item-discription {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
+  margin: 0;
+
   font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 3%;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
 /* !!! ------------------ MAIN-OCCUPATION(STUDIO) ------------------ !!!*/
 .occupation {
-  display: flex;
-  margin: 0px auto;
-  width: 100%;
-  height: 390px;
-  padding-bottom: 94px;
-}
-.occupation-block {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1170px;
 }
 .occupation-title {
-  display: flex;
-  width: 366px;
-  height: 42px;
-  margin: 0px auto 50px auto;
-  font-family: "Roboto";
-  font-style: normal;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 50px;
   font-weight: var(--bold-font-weight);
   font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 3%;
+  line-height: 1.16;
+
+  letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
 .occupation-ul {
   display: flex;
-  justify-content: space-between;
-  list-style: none;
-  width: 1170px;
-  height: 386px;
-  margin: 0;
   padding: 0;
+  list-style: none;
 }
-.occupation-list-item,
-.occupation-one-img,
-.occupation-two-img,
-.occupation-tree-img {
-  width: 370px;
-  height: 294px;
+.occupation-list-item:not(:last-child){
+  margin-right: 30px;
 }
 /* !!! ------------------ MAIN-OUR-TEAM(STUDIO) ------------------ !!!*/
-.section-our-team {
-  display: flex;
+#portfolio{
+  background-color: #F5F4FA;
   width: 100%;
-  padding: 94px 0px;
-}
-.block-our-team {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1170px;
-  height: 465px;
 }
 .our-team-title {
-  margin: 0px auto 50px auto;
-  width: 264px;
-  height: 42px;
-
-  font-family: "Roboto";
-  font-style: normal;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 50px;
   font-weight: var(--bold-font-weight);
   font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 3%;
+  line-height: 1.16;
+
+  letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
 .our-team-ul {
-  list-style: none;
   display: flex;
-  margin-left: auto;
-  margin-bottom: auto;
   padding: 0;
+  margin: 0;
+  list-style: none;
 }
 .our-team-list-item {
-  /* width: 270px;
-  height: 368px; */
+  padding-bottom: 30px;
+  text-align: center;
+  background-color: #fff;
 }
-.portfolio-list-item-one,
-.portfolio-list-item-two,
-.portfolio-list-item-tree,
-.portfolio-list-item-four {
-  margin: 0px 15px 0px 15px;
-  width: 270px;
-  height: 368px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
+.our-team-list-item:not(:last-child){
+  margin-right: 30px;
 }
-.portfolio-list-item-one {
-  margin-left: 0px;
+.person-link {
+  text-decoration: none;
 }
-.portfolio-list-item-four {
-  margin-right: 0px;
+.person-foto {
+  margin-bottom: 30px;
 }
 .person-title {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: var(--bold-font-weight);
+  font-weight: var(--medium-font-weight);
   font-size: 16px;
-  line-height: 19px;
-  text-align: center;
+  line-height: 1.2;
+  margin: 0;
+  margin-bottom: 10px;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
 .person-discription {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
   font-size: 16px;
-  line-height: 19px;
-  text-align: center;
+  color: #757575;
+  line-height: 1.2;
   letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
+  margin: 0;
 }
 /* !!! ------------------ MAIN-FILTER(PORTFOLIO) ------------------ !!!*/
-.section-btn-projects {
-  width: 100%;
-  height: calc(1360px +574px);
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.block-btn {
-  width: 575px;
-  padding-bottom: 34px;
-  margin-right: auto;
-  margin-left: auto;
-}
 .ul-project-filter {
-  margin: 0;
-  display: flex;
   list-style: none;
-  padding: 0px;
+  padding: 0;
+  margin: 0;
 }
 .filter-list-item {
   font-family: inherit;
@@ -405,14 +297,13 @@ body {
   color: inherit;
 }
 .filter-list-item button {
-  margin-top: 1px;
-  font-family: var(--text-font);
   font-weight: var(--medium-font-weight);
-  font-size: var(--primary-font-size);
   border-radius: 4px;
   border: none;
+  cursor: pointer;
+  background-color: #f5f4fa;
 }
-.filter-list-item button:hover {
+.filter-list-item button:hover,button:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: var(--accent-color);
   color: var(--primary-white-color);
@@ -420,183 +311,121 @@ body {
 #filter-btn-all {
   width: 73px;
   height: 38px;
-
   font-weight: var(--medium-font-weight);
   font-size: var(--primary-font-size);
 }
 #filter-btn-Web {
   width: 125px;
   height: 38px;
-
   font-weight: var(--medium-font-weight);
   font-size: var(--primary-font-size);
 }
 #filter-btn-App {
   width: 112px;
   height: 38px;
-
   font-weight: var(--medium-font-weight);
   font-size: var(--primary-font-size);
 }
 #filter-btn-Design {
   width: 103px;
   height: 38px;
-
   font-weight: var(--medium-font-weight);
   font-size: var(--primary-font-size);
 }
 #filter-btn-Marketing {
   width: 130px;
   height: 38px;
-
   font-weight: var(--medium-font-weight);
   font-size: var(--primary-font-size);
 }
-/* !!!-------------------- MAIN PROJECTS (PORTFOLIO) ------------------ !!! */
-.block-project {
-  width: 1230px;
-  height: calc(1360px -188px);
-  margin-right: auto;
-  margin-left: auto;
-}
-.project-list-item {
-  margin: 15px;
-}
-.portfolio-project-one {
-  width: 370px;
-  height: 404px;
-}
-.portfolio-project-two {
-  width: 370px;
-  height: 404px;
-}
-.portfolio-project-tree {
-  width: 370px;
-  height: 404px;
-}
-.portfolio-project-four {
-  width: 370px;
-  height: 404px;
-}
-.portfolio-project-five {
-  width: 370px;
-  height: 404px;
-}
-.portfolio-project-six {
-  width: 370px;
-  height: 404px;
-}
-.portfolio-project-seven {
-  width: 370px;
-  height: 404px;
-}
-.portfolio-project-eight {
-  width: 370px;
-  height: 404px;
-}
-.portfolio-project-nine {
-  width: 370px;
-  height: 404px;
-}
-.project-ul {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0px 15px 0px 15px;
+.portfolio-btn-name {
   margin: 0;
-
+  font-weight: var(--medium-font-weight);
+  font-size: 16px;
+  line-height: 1.625;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+/* !!!------------- PORTFOLIO PROJECTS-------------------- !!!*/
+.project-ul {
+  margin: 0;
+  padding: 0;
   list-style: none;
   font-weight: var(--medium-font-weight);
   font-size: var(--primary-font-size);
 }
-/* .project-ul li{
-  outline: 2px solid red;
-} */
+.project-text-block{
+
+}
+.project-li {
+  border: #eeeeee solid 1px;
+  width: 370px;
+  height: 404px;
+}
+.project-li a {
+  text-decoration: none;
+}
 .project-title {
+  padding-left: 24px;
+  margin: 0;
   color: var(--title-text-color);
   font-weight: var(--bold-font-weight);
   font-size: var(--project-title-size);
-  line-height: 36px;
+  line-height: 2;
 }
 .project-discription {
-  font-weight: var(--regular-font-weight);
-  font-size: var(--project-discription-size);
-  line-height: 30px;
+  padding-left: 24px;
   margin: 0;
+  font-size: var(--project-discription-size);
+  line-height: 1.9;
   color: var(--secondary-text-color);
+  font-weight: var(--regular-font-weight);
 }
-/* !!! ------------------ FOOTER  ------------------ !!! */
-.footer-block {
-  width: 1170px;
-  height: 140px;
-  margin-left: auto;
-  margin-right: auto;
+/* !!! ------------------ FOOTER ------------------ !!! */
+.footer {
+  background-color: var(--dark-background);
+  width: 100%;
 }
+.footer .container{
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .footer-logo {
-  width: 145px;
-  height: 31px;
-  color: var(--primary-white-color);
   text-decoration: none;
+  color: var(--primary-white-color);
   font-family: "Raleway";
-  font-style: normal;
   font-weight: var(--bold-font-weight);
   font-size: 26px;
-  line-height: 31px;
-  letter-spacing: 3%;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
 }
 .footer-address {
-  width: 231px;
-  height: 81px;
+  font-style: normal;
 }
 .footer-address-ul {
-  padding-left: 0;
   margin: 0;
+  padding: 0;
 }
 .address-list-item,
 .contact-list-item {
-  margin-top: 9px;
   list-style: none;
-  font-style: normal;
 }
 .footer-address-link {
-  width: 231px;
-  height: 21px;
-
   text-decoration: none;
   color: var(--primary-white-color);
-  font-family: "Roboto";
-  font-style: normal;
+
   font-weight: var(--regular-font-weight);
   font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 3%;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
 }
 .footer-link-mail,
 .footer-link-num {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--primary-white-color);
   opacity: 60%;
   text-decoration: none;
-}
-
-.footer-link-mail {
-  width: 231px;
-  height: 21px;
-}
-.footer-link-num {
-  width: 231px;
-  height: 21px;
-}
-
-/* !!! --------------- FOOTER STUDY ------------------ !!! */
-.footer {
-  width: 100%;
-  height: 260px;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: var(--dark-background);
 }
